test/basic/good/core040.lat
int main() {
	printInt(1);
	printInt(1+1);
	return 0;
}
