test/basic/bad/bad061.lat
class janusz extends waldemar {
  int a;
}

int main() {
  return 1;
}
